# boardwalk

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  cog.toml  deny.toml  mise.toml
.github/workflows/: ci.yml  commit-check.yml  release-plan.yml  release.yml
crates/boardwalk/: Cargo.toml
crates/boardwalk-caql/: Cargo.toml
crates/boardwalk-caql/src/: eval.rs  parse.rs
crates/boardwalk-core/: Cargo.toml
crates/boardwalk-core/src/: lib.rs
crates/boardwalk-events/: Cargo.toml
crates/boardwalk-events/src/: topic.rs  wire.rs
crates/boardwalk-http/: Cargo.toml
crates/boardwalk-http/src/: app.rs  core.rs  lib.rs  peer_streams.rs  render.rs  routes.rs  ws.rs
crates/boardwalk-http/tests/: integration.rs
crates/boardwalk-macros/: Cargo.toml
crates/boardwalk-macros/src/: lib.rs
crates/boardwalk-macros/tests/: device.rs
crates/boardwalk-peer/: Cargo.toml
crates/boardwalk-peer/src/: lib.rs
crates/boardwalk-registry/: Cargo.toml
crates/boardwalk-registry/src/: lib.rs
crates/boardwalk-server/: Cargo.toml
crates/boardwalk-server/src/: lib.rs
crates/boardwalk-server/tests/: apps.rs  factory.rs  observe.rs  peer.rs  persist.rs  scout.rs  shutdown.rs  streams.rs  tls.rs
crates/boardwalk-siren/: Cargo.toml
crates/boardwalk-siren/src/: lib.rs
crates/boardwalk-tunnel/: Cargo.toml
crates/boardwalk/src/: core.rs  internal_adapter_tests.rs  internal_runtime_tests.rs  job_runner.rs  lib.rs  links.rs  peer.rs  registry.rs  secret.rs  server.rs  siren.rs  tunnel.rs
crates/boardwalk/src/caql/: eval.rs  lex.rs  mod.rs  parse.rs
crates/boardwalk/src/events/: bus.rs  coalesce.rs  envelope.rs  mod.rs  policy.rs  replay.rs  sequencer.rs  topic.rs  wire.rs
crates/boardwalk/src/http/: app.rs  core.rs  mod.rs  peer_streams.rs  render.rs  routes.rs  ws.rs
crates/boardwalk/src/persistence/: mod.rs  redb.rs
crates/boardwalk/src/query/: ast.rs  eval.rs  mod.rs
crates/boardwalk/src/runtime/: actor.rs  context.rs  directory.rs  executor.rs  handle.rs  mod.rs  node.rs  resource.rs  transition.rs
crates/boardwalk/tests/: actor_lifecycle.rs  actor_macro_hooks.rs  actor_macros.rs  actor_runtime.rs  apps.rs  characterization_event_wire_shape.rs  characterization_hypermedia.rs  characterization_peer_event_wire_shape.rs  characterization_peers.rs  characterization_ql.rs  characterization_transitions.rs  characterization_ws_lifecycle.rs  docs.rs  event_envelope_minting.rs  event_envelope_state_change.rs  event_id_to_stream_replay.rs  events_backpressure.rs  events_coalesce.rs  factory.rs  http.rs  http_stream_eager_unsub.rs  http_stream_slow_consumer_gap.rs  job_runner.rs  job_runner_http.rs  job_runner_streams.rs  macros.rs  metadata.rs  node_runtime.rs  observe.rs  peer.rs  peer_admission_public.rs  peer_broadcast_lag_emits_stream_gap.rs  peer_ndjson_envelope_preserved.rs  persist.rs  prelude.rs  public_api.rs  query_module_publicity.rs  replay_records_on_publish.rs  request_context.rs  resource_actor_traits.rs  (+9 more)
crates/boardwalk/tests/internal/: actor_led_fixture.rs  apps.rs  boardwalk_builder.rs  characterization_event_wire_shape.rs  characterization_hypermedia.rs  characterization_peer_event_wire_shape.rs  characterization_peers.rs  characterization_ql.rs  characterization_transitions.rs  characterization_ws_lifecycle.rs  event_envelope_minting.rs  event_envelope_state_change.rs  event_id_to_stream_replay.rs  event_stream_contracts.rs  explicit_stream_emission.rs  factory.rs  http.rs  http_stream_eager_unsub.rs  http_stream_slow_consumer_gap.rs  metadata.rs  observe.rs  peer.rs  peer_admission.rs  peer_broadcast_lag_emits_stream_gap.rs  peer_event_wire_shape.rs  peer_ndjson_envelope_preserved.rs  peer_resources.rs  persist.rs  proxy.rs  replay_records_on_publish.rs  resource_actor_http_core.rs  resource_event_wire_shape.rs  resource_hypermedia.rs  resource_query.rs  resource_registration.rs  resource_registry_persistence.rs  resource_snapshot_shape.rs  resource_transitions.rs  resource_ws_lifecycle.rs  scout.rs  (+5 more)
crates/zetta/: Cargo.toml
crates/zetta-caql/: Cargo.toml
crates/zetta-core/: Cargo.toml
crates/zetta-core/src/: lib.rs
crates/zetta-events/: Cargo.toml
crates/zetta-events/src/: bus.rs  lib.rs  topic.rs  wire.rs
crates/zetta-http/: Cargo.toml
crates/zetta-http/src/: app.rs  core.rs  lib.rs  peer_streams.rs  render.rs  routes.rs  ws.rs
crates/zetta-http/tests/: integration.rs
crates/zetta-macros/: Cargo.toml
crates/zetta-macros/src/: lib.rs
crates/zetta-macros/tests/: device.rs
crates/zetta-peer/: Cargo.toml
crates/zetta-peer/src/: lib.rs
crates/zetta-registry/: Cargo.toml
crates/zetta-registry/src/: lib.rs
crates/zetta-server/: Cargo.toml
crates/zetta-server/src/: lib.rs
crates/zetta-server/tests/: apps.rs  factory.rs  observe.rs  peer.rs  persist.rs  scout.rs  shutdown.rs  streams.rs  tls.rs
crates/zetta-siren/: Cargo.toml
crates/zetta-siren/src/: lib.rs
crates/zetta-tunnel/: Cargo.toml
crates/zetta-tunnel/src/: lib.rs
crates/zetta/src/: lib.rs
docs/: 00-overview.md  01-architecture.md  02-protocol-peer.md  03-protocol-events.md  04-siren-modeling.md  05-caql.md  06-dependencies.md  07-api-ergonomics.md  08-roadmap.md  09-questions.md  10-questions-v2.md  11-questions-v3.md  V1-ROADMAP.md  caql.md  devices.md  event-envelope.md  events.md  getting-started.md  peers.md  releasing.md  resources.md
drivers/boardwalk-mock-led/: Cargo.toml
drivers/boardwalk-mock-led/src/: lib.rs
drivers/zetta-mock-led/: Cargo.toml
drivers/zetta-mock-led/src/: lib.rs
examples/hello-led/: Cargo.toml  README.md
examples/hello-led/boardwalk-mock-led/: Cargo.toml
examples/hello-led/boardwalk-mock-led/src/: lib.rs
examples/hello-led/src/: main.rs
examples/hello-led/tests/: actor_fixture.rs
examples/job-runner/: Cargo.toml  README.md
examples/job-runner/src/: address.rs  api.rs  events.rs  job.rs  lib.rs  main.rs  queue.rs  streams.rs
examples/job-runner/tests/: http.rs
examples/tunnel-poc/: Cargo.toml
examples/tunnel-poc/src/: main.rs
scripts/: run-release-plan.sh  smoke-ndjson.sh  smoke-ws.sh
(+5 files in other folders)
