[workspace]
resolver = "3"
members = [
    "crates/boardwalk",
    "crates/boardwalk-macros",
    "drivers/boardwalk-mock-led",
    "examples/tunnel-poc",
    "examples/hello-led",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Kevin Swiber <kevin@swiber.dev>"]
homepage = "https://github.com/kevinswiber/boardwalk"
repository = "https://github.com/kevinswiber/boardwalk"
# Workspace default. Each library crate that ships flips this on
# explicitly with `publish = true`. Examples, drivers, and other
# in-tree-only members inherit `publish = false` and stay unpublished.
publish = false

[workspace.dependencies]
# Internal crates (path + version so they publish + resolve from
# crates.io once the dependency chain lands there).
boardwalk = { path = "crates/boardwalk", version = "0.2.0" }
boardwalk-macros = { path = "crates/boardwalk-macros", version = "0.2.0" }

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures = "0.3"
async-trait = "0.1"

# HTTP / HTTP2 / WS
axum = { version = "0.8", features = ["ws", "macros"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
h2 = "0.4"
tokio-tungstenite = "0.29"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws-lc-rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
mime = "0.3"

# Persistence
redb = "2"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
url = { version = "2", features = ["serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
regex = "1"
backon = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CaQL parser
chumsky = "0.10"

# Builder / config
bon = "3"
figment = { version = "0.10", features = ["toml", "env"] }

# Testing
insta = { version = "1", features = ["json", "yaml"] }
rstest = "0.23"
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
