[package]
name = "boardwalk-caql"
version = "0.0.1"
description = "Calypso Query Language parser + evaluator"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true
