[package]
name = "boardwalk-events"
description = "Pub/sub bus and multiplexed event WebSocket sub-protocol for Boardwalk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[dependencies]
boardwalk-caql.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
futures.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
