[package]
name = "boardwalk-http"
description = "HTTP/1.1 + HTTP/2 server emitting Siren JSON for Boardwalk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[dependencies]
boardwalk-core.workspace = true
boardwalk-siren.workspace = true
boardwalk-events.workspace = true
boardwalk-caql.workspace = true
boardwalk-tunnel.workspace = true

async-trait.workspace = true

axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
mime.workspace = true
url.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

urlencoding = "2"
serde_urlencoded = "0.7"
async-stream = "0.3"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite.workspace = true
urlencoding = "2"
