[package]
name = "boardwalk-macros"
description = "Proc macros for ergonomic Boardwalk drivers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
boardwalk-core.workspace = true
tokio = { workspace = true }
futures.workspace = true
