[package]
name = "boardwalk-peer"
description = "Outbound peer client and inbound peer socket for Boardwalk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[dependencies]
boardwalk-tunnel.workspace = true
boardwalk-registry.workspace = true
boardwalk-events.workspace = true
boardwalk-http.workspace = true

axum.workspace = true
async-trait.workspace = true
tokio.workspace = true
h2.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http2", "server"] }
hyper-util = { workspace = true, features = ["client-legacy", "http2", "tokio"] }
tower.workspace = true
url.workspace = true
backon.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
urlencoding = "2"
