[package]
name = "boardwalk-registry"
description = "Persistent device + peer registries (redb-backed) for Boardwalk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[dependencies]
boardwalk-core.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
