[package]
name = "boardwalk-server"
description = "Top-level builder for assembling a Boardwalk server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[dependencies]
boardwalk-core.workspace = true
boardwalk-events.workspace = true
boardwalk-http.workspace = true
boardwalk-peer.workspace = true
boardwalk-registry.workspace = true

axum.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
url.workspace = true
tracing.workspace = true
uuid.workspace = true
serde_json.workspace = true

[dev-dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { workspace = true, default-features = false, features = ["std", "tls12", "aws-lc-rs"] }
serde_json.workspace = true
tokio-rustls = { workspace = true, default-features = false, features = ["aws-lc-rs", "tls12"] }
tokio-tungstenite.workspace = true
tempfile = "3"
boardwalk-http.workspace = true
boardwalk-tunnel = { workspace = true, features = ["dangerous-test-tls"] }
