[package]
name = "boardwalk-siren"
description = "Siren hypermedia types (serde) for Boardwalk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
publish = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
url.workspace = true
http.workspace = true
