[package]
name = "boardwalk"
description = "Hypermedia server framework with reverse-tunnel federation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/boardwalk"
readme = "README.md"
keywords = ["hypermedia", "siren", "websocket", "peer", "tunnel"]
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "network-programming",
    "api-bindings",
]
publish = true

[dependencies]
boardwalk-core.workspace = true
boardwalk-http.workspace = true
boardwalk-macros.workspace = true
boardwalk-server.workspace = true
