[package]
name = "zetta-events"
version = "0.0.1"
description = "Pub/sub bus and multiplexed event WebSocket sub-protocol"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
zetta-caql = { path = "../zetta-caql" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
futures.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
