[package]
name = "zetta-http"
version = "0.0.1"
description = "HTTP/1.1 + HTTP/2 server emitting Siren JSON for Zetta"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
zetta-core = { path = "../zetta-core" }
zetta-siren = { path = "../zetta-siren" }
zetta-events = { path = "../zetta-events" }
zetta-caql = { path = "../zetta-caql" }
zetta-tunnel = { path = "../zetta-tunnel" }

async-trait.workspace = true

axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
mime.workspace = true
url.workspace = true
time.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

urlencoding = "2"
serde_urlencoded = "0.7"
async-stream = "0.3"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite.workspace = true
urlencoding = "2"
