[package]
name = "zetta-macros"
version = "0.0.1"
description = "Proc macros for ergonomic Zetta drivers"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
zetta-core = { path = "../zetta-core" }
tokio = { workspace = true }
futures.workspace = true
