[package]
name = "zetta-peer"
version = "0.0.1"
description = "Outbound peer client and inbound peer socket for Zetta"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
zetta-tunnel = { path = "../zetta-tunnel" }
zetta-registry = { path = "../zetta-registry" }
zetta-events = { path = "../zetta-events" }
zetta-http = { path = "../zetta-http" }

axum.workspace = true
async-trait.workspace = true
tokio.workspace = true
h2.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http2", "server"] }
hyper-util = { workspace = true, features = ["client-legacy", "http2", "tokio"] }
tower.workspace = true
url.workspace = true
backon.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
urlencoding = "2"
