[package]
name = "zetta-registry"
version = "0.0.1"
description = "Persistent device + peer registries backed by redb"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
zetta-core = { path = "../zetta-core" }
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
