[package]
name = "zetta-server"
version = "0.0.1"
description = "Top-level builder for assembling a Zetta server"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
zetta-core = { path = "../zetta-core" }
zetta-events = { path = "../zetta-events" }
zetta-http = { path = "../zetta-http" }
zetta-peer = { path = "../zetta-peer" }
zetta-registry = { path = "../zetta-registry" }

axum.workspace = true
anyhow.workspace = true
tokio.workspace = true
url.workspace = true
tracing.workspace = true
uuid.workspace = true
serde_json.workspace = true

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json.workspace = true
tokio-tungstenite.workspace = true
tempfile = "3"
zetta-http = { path = "../zetta-http" }
