[package]
name = "zetta-siren"
version = "0.0.1"
description = "Siren hypermedia types (serde) for Zetta"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
url.workspace = true
http.workspace = true
