[package]
name = "zetta-tunnel"
version = "0.0.1"
description = "WebSocket-upgrade then role-reversed HTTP/2 tunnel"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
h2.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
base64 = "0.22"
sha1 = "0.10"
rand = "0.9"
urlencoding = "2"
rustls = { workspace = true, default-features = false, features = ["std", "tls12"] }
tokio-rustls = { workspace = true, default-features = false }
rustls-platform-verifier = "0.7"
rustls-pki-types = "1"

[features]
# When enabled, peer TLS dials accept any server cert. Test-only —
# never enable in production. Lets integration tests use self-signed
# certs without poking the OS trust store.
dangerous-test-tls = []
