[package]
name = "boardwalk-mock-led"
version = "0.0.1"
description = "Mock LED driver for Boardwalk tests and demos"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
boardwalk-core = { path = "../../crates/boardwalk-core" }
futures.workspace = true
