[package]
name = "boardwalk-mock-led"
description = "Mock LED driver for Boardwalk tests and demos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
boardwalk.workspace = true
futures.workspace = true
