[package]
name = "zetta-mock-led"
version = "0.0.1"
description = "Mock LED driver for Zetta tests and demos"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
zetta-core = { path = "../../crates/zetta-core" }
futures.workspace = true
