[package]
name = "boardwalk-mock-led"
description = "Mock LED actor fixture for Boardwalk tests and demos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
boardwalk.workspace = true
serde_json.workspace = true
